Fixes hide issue with collapse button

--- a/css/navigationBar.css
+++ b/css/navigationBar.css
@@ -104,11 +104,13 @@ Navigation Bar
 }
 
 /*Mobile Contextuals*/
-@media screen and (max-width: 500px) {
-  #collapseContainer { 
+@media screen and (min-width: 500px) {
+   #collapseContainer { 
     display: none;
     visibility: hidden;
-  }
+  } 
+}
+@media screen and (max-width: 500px) {
   .navigationBar #pageLinks { margin: 0em 1em 0em 1em; }
   .expandedNavigationButton { left: 151px; }
   .collapsedNavigationButton { left: 0; }
